crates/toml/tests/snapshots/invalid/ext/string/no-close-recovery-01.stderr
TOML parse error at line 2, column 2
  |
2 | "
  |  ^
key with no value, expected `=`
